more cellmixer example

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,9 @@
     "\n",
     "\n",
     "@magics_class\n",
-    "class ReverseCell(Magics):\n",
+    "class CellMixer(Magics):\n",
     "    @cell_magic\n",
-    "    def reverse_cell(self, line, cell):\n",
+    "    def reverse_cell(self, magicline, cell):\n",
     "        with capture_output(stdout=False, stderr=False, display=True) as result:\n",
     "            cell_lines = cell.split(\"\\n\")\n",
     "            reversed_cell_lines = list(reversed(cell_lines))\n",
@@ -26,7 +26,7 @@
     "            display(output)\n",
     "\n",
     "    @cell_magic\n",
-    "    def shuffle_cell(self, line, cell):\n",
+    "    def shuffle_cell(self, magicline, cell):\n",
     "        with capture_output(stdout=False, stderr=False, display=True) as result:\n",
     "            cell_lines = cell.split(\"\\n\")\n",
     "            random.shuffle(cell_lines)\n",
@@ -35,13 +35,65 @@
     "        for output in result.outputs:\n",
     "            display(output)\n",
     "\n",
+    "    @cell_magic\n",
+    "    def repeat_all_lines_twice(self, magicline, cell):\n",
+    "        with capture_output(stdout=False, stderr=False, display=True) as result:\n",
+    "            cell_lines = cell.split(\"\\n\")\n",
+    "            new_lines = []\n",
+    "            for l  in cell_lines:\n",
+    "                new_lines.append(l)\n",
+    "                new_lines.append(l)\n",
+    "\n",
+    "            reversed_cell = \"\\n\".join(new_lines)\n",
+    "            self.shell.run_cell(reversed_cell)\n",
+    "        for output in result.outputs:\n",
+    "            display(output)\n",
+    "\n",
+    "    @cell_magic\n",
+    "    def repeat_certain_line(self, magicline, cell):\n",
+    "        with capture_output(stdout=False, stderr=False, display=True) as result:\n",
+    "            cell_lines = cell.split(\"\\n\")\n",
+    "            new_lines = []\n",
+    "            for l  in cell_lines:\n",
+    "                new_lines.append(l)\n",
+    "                if \"# 2x\" in l:\n",
+    "                    new_lines.append(l)\n",
+    "            final_lines = \"\\n\".join(new_lines)\n",
+    "            self.shell.run_cell(final_lines)\n",
+    "        for output in result.outputs:\n",
+    "            display(output)\n",
+    "\n",
     "ipy = get_ipython()\n",
-    "ipy.register_magics(ReverseCell)\n"
+    "ipy.register_magics(CellMixer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "George\n",
+      "Ringo\n",
+      "Paul\n",
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%reverse_cell\n",
+    "print(\"John\")\n",
+    "print(\"Paul\")\n",
+    "print(\"Ringo\")\n",
+    "print(\"George\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +101,8 @@
      "output_type": "stream",
      "text": [
       "Paul\n",
-      "Ringo\n",
       "John\n",
+      "Ringo\n",
       "George\n"
      ]
     }
@@ -59,6 +111,59 @@
     "%%shuffle_cell\n",
     "print(\"John\")\n",
     "print(\"Paul\")\n",
+    "print(\"Ringo\")\n",
+    "print(\"George\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "John\n",
+      "Paul\n",
+      "Paul\n",
+      "Ringo\n",
+      "Ringo\n",
+      "George\n",
+      "George\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%repeat_all_lines_twice\n",
+    "print(\"John\")\n",
+    "print(\"Paul\")\n",
+    "print(\"Ringo\")\n",
+    "print(\"George\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "Paul\n",
+      "Paul\n",
+      "Ringo\n",
+      "George\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%repeat_certain_line\n",
+    "print(\"John\")\n",
+    "print(\"Paul\") # 2x\n",
     "print(\"Ringo\")\n",
     "print(\"George\")"
    ]
