--- a/cellmixer_notebook.ipynb
+++ b/cellmixer_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +64,12 @@
     "            display(output)\n",
     "\n",
     "ipy = get_ipython()\n",
-    "ipy.register_magics(CellMixer)\n"
+    "ipy.register_magics(CellMixer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paul\n",
-      "John\n",
+      "George\n",
       "Ringo\n",
-      "George\n"
+      "Paul\n",
+      "John\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,13 +167,6 @@
     "print(\"Ringo\")\n",
     "print(\"George\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
